<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ObjectPage"
    android:background="@color/colorLightGray">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorGray"
        android:src="@drawable/ic_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="center" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/price"
            android:textColor="@color/colorBlack"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/price_per_sm_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/price_per_sm"
            android:textColor="@color/colorGray"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/address"
            android:textColor="@color/colorGray"
            android:textSize="20dp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="комнат"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorGray"/>
            <TextView
                android:id="@+id/rooms_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="....."
                android:textSize="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorGray"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="площадь"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorGray"/>
            <TextView
                android:id="@+id/square_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="....."
                android:textSize="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorGray"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="этаж"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorGray"/>
            <TextView
                android:id="@+id/floor_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="....."
                android:textSize="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/colorGray"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_edit"/>
</androidx.constraintlayout.widget.ConstraintLayout>